compiler/src/test/resources/amyc/typer/passing/FunctionInParameter.amy
module highOrderFunction

    fn test(f: () => String): Unit = {
        ()
    }

end highOrderFunction