compiler/src/test/resources/amyc/typer/failing/IfError2.amy
module IfError
  if (true) { () } else { false }
end IfError
